--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             height: 100vh;
             background-color: #f0f0f0;
             margin: 0;
+            text-align: center;
         }
 
         #playButton {
@@ -24,6 +25,15 @@
             max-height: 300px;
             border: none;
             cursor: pointer;
+            position: relative;
+        }
+
+        #playText {
+            position: absolute;
+            top: -100px;
+            font-size: 4rem;
+            font-weight: bold;
+            color: white;
         }
 
         #countdown {
@@ -51,7 +61,18 @@
             background-color: #FF0000; /* Red for reset */
         }
 
+        #twistAgainText {
+            font-size: 3rem;
+            color: red;
+            display: none;
+            margin-bottom: 20px;
+        }
+
         @media (max-width: 768px) {
+            #playText {
+                font-size: 3rem;
+            }
+
             #countdown {
                 font-size: 3rem;
             }
@@ -65,13 +86,19 @@
                 font-size: 1.5rem;
                 padding: 5px 15px;
             }
+
+            #twistAgainText {
+                font-size: 2rem;
+            }
         }
     </style>
 </head>
 <body>
 
+    <div id="playText">PLAY!</div>
     <button id="playButton"></button>
 
+    <div id="twistAgainText">LET'S TWIST AGAIN!</div>
     <div id="countdown">20</div>
     <button id="pauseButton">PAUSE</button>
     <button id="resetButton">RESET</button>
@@ -104,8 +131,9 @@
 
         // Function to start the countdown
         function startCountdown() {
-            // Hide play button, show countdown and pause button
+            // Hide play button and play text, show countdown and pause button
             document.getElementById("playButton").style.display = 'none';
+            document.getElementById("playText").style.display = 'none';
             document.getElementById("countdown").style.display = 'block';
             document.getElementById("pauseButton").style.display = 'block';
 
@@ -130,8 +158,10 @@
             let random = Math.random();
             if (random < 0.3) { // 30% chance
                 currentAudio = document.getElementById("audioA");
+                document.getElementById("twistAgainText").style.display = 'block'; // Show "LET'S TWIST AGAIN!"
             } else { // 70% chance
                 currentAudio = document.getElementById("audioB");
+                document.getElementById("twistAgainText").style.display = 'none'; // Hide "LET'S TWIST AGAIN!"
             }
             currentAudio.play();
             isPlaying = true;
@@ -156,11 +186,13 @@
             countdownValue = 20;
             document.getElementById("countdown").innerText = countdownValue;
 
-            // Show play button, hide reset, countdown, and pause button
+            // Show play button and text, hide reset, countdown, and pause button
             document.getElementById("playButton").style.display = 'block';
+            document.getElementById("playText").style.display = 'block';
             document.getElementById("resetButton").style.display = 'none';
             document.getElementById("pauseButton").style.display = 'none';
             document.getElementById("countdown").style.display = 'none';
+            document.getElementById("twistAgainText").style.display = 'none';
             isPlaying = false;
         }
     </script>
