--- a/index.html
+++ b/index.html
@@ -3,198 +3,124 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bottone Audio con Countdown e Pausa</title>
+    <title>Game</title>
     <style>
         body {
             display: flex;
             flex-direction: column;
-            justify-content: center;
             align-items: center;
+            justify-content: center;
             height: 100vh;
-            background-color: #f0f0f0;
             margin: 0;
+            background-color: #f0f0f0;
             text-align: center;
         }
 
-        #playButton {
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
+
+        button {
             background: url('red.png') no-repeat center;
             background-size: contain;
-            width: 80%;
-            max-width: 300px;
-            height: 80%;
-            max-height: 300px;
+            width: 100px;
+            height: 100px;
             border: none;
             cursor: pointer;
-            position: relative;
         }
 
-        #playText {
-            position: absolute;
-            top: -100px;
-            font-size: 4rem;
-            font-weight: bold;
-            color: white;
+        #scoreboard {
+            margin-top: 20px;
         }
 
-        #countdown {
-            font-size: 5rem;
-            margin-bottom: 20px;
-            display: none;
+        #scoreboard table {
+            width: 50%;
+            border-collapse: collapse;
         }
 
-        #pauseButton, #resetButton {
-            font-size: 2rem;
-            padding: 10px 20px;
-            border: none;
+        #scoreboard th, #scoreboard td {
+            border: 1px solid #000;
+            padding: 10px;
+            text-align: center;
+        }
+
+        #scoreboard td button {
             cursor: pointer;
-            background-color: #4CAF50;
-            color: white;
-            border-radius: 5px;
-            display: none;
-        }
-
-        #pauseButton {
-            background-color: #FFA500; /* Orange for pause */
-        }
-
-        #resetButton {
-            background-color: #FF0000; /* Red for reset */
-        }
-
-        #twistAgainText {
-            font-size: 3rem;
-            color: red;
-            display: none;
-            margin-bottom: 20px;
-        }
-
-        @media (max-width: 768px) {
-            #playText {
-                font-size: 3rem;
-            }
-
-            #countdown {
-                font-size: 3rem;
-            }
-
-            #playButton {
-                width: 60%;
-                height: 60%;
-            }
-
-            #pauseButton, #resetButton {
-                font-size: 1.5rem;
-                padding: 5px 15px;
-            }
-
-            #twistAgainText {
-                font-size: 2rem;
-            }
+            font-size: 1rem;
+            padding: 5px;
         }
     </style>
 </head>
 <body>
 
-    <div id="playText">PLAY!</div>
+    <h1 id="turnMessage"></h1>
+
     <button id="playButton"></button>
 
-    <div id="twistAgainText">LET'S TWIST AGAIN!</div>
-    <div id="countdown">20</div>
-    <button id="pauseButton">PAUSE</button>
-    <button id="resetButton">RESET</button>
-
-    <audio id="audioA" src="lets_twist_again.mp3"></audio>
-    <audio id="audioB" src="countdown.mp3"></audio>
+    <div id="scoreboard">
+        <table>
+            <thead>
+                <tr>
+                    <th>Player</th>
+                    <th>Points</th>
+                    <th>Position</th>
+                    <th>Add Points</th>
+                </tr>
+            </thead>
+            <tbody id="scoreboardBody"></tbody>
+        </table>
+    </div>
 
     <script>
-        let isPlaying = false;
-        let currentAudio = null;
-        let countdownInterval = null;
-        let countdownValue = 20;
+        const players = JSON.parse(localStorage.getItem('players'));
+        const playerScores = players.map(player => ({ name: player.name, color: player.color, points: 0 }));
+        let currentPlayerIndex = 0;
+        let rounds = 0;
 
-        // Play button functionality
-        document.getElementById("playButton").addEventListener("click", function () {
-            startCountdown();
-            playRandomAudio();
+        const turnMessage = document.getElementById('turnMessage');
+        const playButton = document.getElementById('playButton');
+        const scoreboardBody = document.getElementById('scoreboardBody');
+
+        function updateTurn() {
+            const currentPlayer = players[currentPlayerIndex];
+            turnMessage.textContent = `${currentPlayer.name}, IT'S YOUR TURN!`;
+            turnMessage.style.color = currentPlayer.color;
+        }
+
+        function updateScoreboard() {
+            playerScores.sort((a, b) => b.points - a.points);
+            scoreboardBody.innerHTML = '';
+            playerScores.forEach((player, index) => {
+                const row = document.createElement('tr');
+                row.innerHTML = `
+                    <td style="color: ${player.color};">${player.name}</td>
+                    <td>${player.points}</td>
+                    <td>${index + 1}</td>
+                    <td><button onclick="addPoints(${index})">+</button></td>
+                `;
+                scoreboardBody.appendChild(row);
+            });
+        }
+
+        function addPoints(index) {
+            playerScores[index].points++;
+            updateScoreboard();
+        }
+
+        playButton.addEventListener('click', function() {
+            rounds++;
+            if (rounds >= players.length * 3) {
+                alert("Game Over!");
+                return;
+            }
+
+            currentPlayerIndex = (currentPlayerIndex + 1) % players.length;
+            updateTurn();
         });
 
-        // Pause button functionality
-        document.getElementById("pauseButton").addEventListener("click", function () {
-            pauseCountdown();
-            resetState(); // Reset the page to the initial state
-        });
-
-        // Reset button functionality
-        document.getElementById("resetButton").addEventListener("click", function () {
-            resetState();
-        });
-
-        // Function to start the countdown
-        function startCountdown() {
-            // Hide play button and play text, show countdown and pause button
-            document.getElementById("playButton").style.display = 'none';
-            document.getElementById("playText").style.display = 'none';
-            document.getElementById("countdown").style.display = 'block';
-            document.getElementById("pauseButton").style.display = 'block';
-
-            countdownValue = 20;
-            document.getElementById("countdown").innerText = countdownValue;
-
-            countdownInterval = setInterval(function() {
-                countdownValue--;
-                if (countdownValue > 0) {
-                    document.getElementById("countdown").innerText = countdownValue;
-                } else {
-                    clearInterval(countdownInterval);
-                    document.getElementById("countdown").innerText = "STOP!";
-                    document.getElementById("pauseButton").style.display = 'none';
-                    document.getElementById("resetButton").style.display = 'block';
-                }
-            }, 1000); // Countdown every second
-        }
-
-        // Function to play random audio
-        function playRandomAudio() {
-            let random = Math.random();
-            if (random < 0.3) { // 30% chance
-                currentAudio = document.getElementById("audioA");
-                document.getElementById("twistAgainText").style.display = 'block'; // Show "LET'S TWIST AGAIN!"
-            } else { // 70% chance
-                currentAudio = document.getElementById("audioB");
-                document.getElementById("twistAgainText").style.display = 'none'; // Hide "LET'S TWIST AGAIN!"
-            }
-            currentAudio.play();
-            isPlaying = true;
-        }
-
-        // Function to pause countdown and audio
-        function pauseCountdown() {
-            clearInterval(countdownInterval);
-            if (currentAudio) {
-                currentAudio.pause();
-                currentAudio.currentTime = 0; // Reset audio to the start
-            }
-        }
-
-        // Function to reset the state of the page
-        function resetState() {
-            // Reset audio and countdown
-            if (currentAudio) {
-                currentAudio.pause();
-                currentAudio.currentTime = 0; // Reset audio
-            }
-            countdownValue = 20;
-            document.getElementById("countdown").innerText = countdownValue;
-
-            // Show play button and text, hide reset, countdown, and pause button
-            document.getElementById("playButton").style.display = 'block';
-            document.getElementById("playText").style.display = 'block';
-            document.getElementById("resetButton").style.display = 'none';
-            document.getElementById("pauseButton").style.display = 'none';
-            document.getElementById("countdown").style.display = 'none';
-            document.getElementById("twistAgainText").style.display = 'none';
-            isPlaying = false;
-        }
+        updateTurn();
+        updateScoreboard();
     </script>
 
 </body>
