--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game</title>
+    <title>Add Players</title>
     <style>
         body {
             display: flex;
@@ -13,114 +13,115 @@
             height: 100vh;
             margin: 0;
             background-color: #f0f0f0;
-            text-align: center;
         }
 
         h1 {
-            font-size: 2.5rem;
+            font-size: 2rem;
             margin-bottom: 20px;
         }
 
+        form {
+            display: flex;
+            align-items: center;
+        }
+
+        input {
+            padding: 10px;
+            font-size: 1rem;
+            margin-right: 10px;
+        }
+
         button {
-            background: url('red.png') no-repeat center;
-            background-size: contain;
-            width: 100px;
-            height: 100px;
-            border: none;
+            padding: 10px;
+            font-size: 1rem;
             cursor: pointer;
         }
 
-        #scoreboard {
+        table {
             margin-top: 20px;
-        }
-
-        #scoreboard table {
-            width: 50%;
             border-collapse: collapse;
         }
 
-        #scoreboard th, #scoreboard td {
+        th, td {
             border: 1px solid #000;
             padding: 10px;
             text-align: center;
         }
 
-        #scoreboard td button {
+        #readyButton {
+            margin-top: 20px;
+            padding: 10px 20px;
+            font-size: 1.2rem;
+            display: none;
             cursor: pointer;
-            font-size: 1rem;
-            padding: 5px;
+            background-color: #28a745;
+            color: white;
+            border: none;
         }
     </style>
 </head>
 <body>
 
-    <h1 id="turnMessage"></h1>
+    <h1>ADD PLAYER</h1>
 
-    <button id="playButton"></button>
+    <form id="playerForm">
+        <input type="text" id="playerName" placeholder="Enter player name" required>
+        <button type="submit">+</button>
+    </form>
 
-    <div id="scoreboard">
-        <table>
-            <thead>
-                <tr>
-                    <th>Player</th>
-                    <th>Points</th>
-                    <th>Position</th>
-                    <th>Add Points</th>
-                </tr>
-            </thead>
-            <tbody id="scoreboardBody"></tbody>
-        </table>
-    </div>
+    <table id="playerTable">
+        <thead>
+            <tr>
+                <th>Player</th>
+                <th>Color</th>
+            </tr>
+        </thead>
+        <tbody></tbody>
+    </table>
+
+    <button id="readyButton">READY</button>
 
     <script>
-        const players = JSON.parse(localStorage.getItem('players'));
-        const playerScores = players.map(player => ({ name: player.name, color: player.color, points: 0 }));
-        let currentPlayerIndex = 0;
-        let rounds = 0;
+        const maxPlayers = 7;
+        const minPlayers = 3;
+        const colors = ['#FF5733', '#33FF57', '#3357FF', '#FF33A1', '#FFC300', '#FF5733', '#581845'];
+        const players = [];
 
-        const turnMessage = document.getElementById('turnMessage');
-        const playButton = document.getElementById('playButton');
-        const scoreboardBody = document.getElementById('scoreboardBody');
+        const form = document.getElementById('playerForm');
+        const playerNameInput = document.getElementById('playerName');
+        const playerTableBody = document.querySelector('#playerTable tbody');
+        const readyButton = document.getElementById('readyButton');
 
-        function updateTurn() {
-            const currentPlayer = players[currentPlayerIndex];
-            turnMessage.textContent = `${currentPlayer.name}, IT'S YOUR TURN!`;
-            turnMessage.style.color = currentPlayer.color;
-        }
+        form.addEventListener('submit', function(e) {
+            e.preventDefault();
+            const playerName = playerNameInput.value.trim();
 
-        function updateScoreboard() {
-            playerScores.sort((a, b) => b.points - a.points);
-            scoreboardBody.innerHTML = '';
-            playerScores.forEach((player, index) => {
+            if (playerName && players.length < maxPlayers) {
+                const playerColor = colors[players.length];
+                players.push({ name: playerName, color: playerColor });
+                updatePlayerTable();
+
+                if (players.length >= minPlayers) {
+                    readyButton.style.display = 'block';
+                }
+
+                playerNameInput.value = '';
+            }
+        });
+
+        function updatePlayerTable() {
+            playerTableBody.innerHTML = '';
+            players.forEach((player, index) => {
                 const row = document.createElement('tr');
-                row.innerHTML = `
-                    <td style="color: ${player.color};">${player.name}</td>
-                    <td>${player.points}</td>
-                    <td>${index + 1}</td>
-                    <td><button onclick="addPoints(${index})">+</button></td>
-                `;
-                scoreboardBody.appendChild(row);
+                row.innerHTML = `<td>${player.name}</td><td style="background-color: ${player.color};">${player.color}</td>`;
+                playerTableBody.appendChild(row);
             });
         }
 
-        function addPoints(index) {
-            playerScores[index].points++;
-            updateScoreboard();
-        }
-
-        playButton.addEventListener('click', function() {
-            rounds++;
-            if (rounds >= players.length * 3) {
-                alert("Game Over!");
-                return;
-            }
-
-            currentPlayerIndex = (currentPlayerIndex + 1) % players.length;
-            updateTurn();
+        readyButton.addEventListener('click', function() {
+            localStorage.setItem('players', JSON.stringify(players));
+            window.location.href = 'game.html'; // Redirect to the game page
         });
-
-        updateTurn();
-        updateScoreboard();
     </script>
 
 </body>
