--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aggiungi Giocatori</title>
+    <title>LET'S TWIST AGAIN!</title>
     <style>
         body {
             display: flex;
@@ -80,7 +80,7 @@
         <tbody></tbody>
     </table>
 
-    <button id="readyButton">READY</button>
+    <button id="readyButton">READY!</button>
 
     <script>
         const maxPlayers = 7;
