--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 <body>
 
-    <h1>LET'S TWIST AGAIN!</h1>
+    <h1>ADD PLAYER</h1>
 
     <form id="playerForm">
         <input type="text" id="playerName" placeholder="Enter player name" required>
