--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             padding: 10px;
             font-size: 1rem;
             margin-right: 10px;
+            text-transform: uppercase; /* Questa riga forza l'uppercase */
         }
 
         button {
